fixed submit button overlap

--- a/src/styles/notes/notes__submit.scss
+++ b/src/styles/notes/notes__submit.scss
@@ -3,6 +3,7 @@
     height: 2rem;
     bottom: 10px;
     right: 10px;
+    z-index: 19;
 }
 
 @media print {
